# secbrain

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mutmut-config.py  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .solhint.json  AUTOMATION-QUICK-REF.md  BADGES.md  BOUNTY_ENHANCEMENT_SUMMARY.md  BOUNTY_WORKFLOWS_IMPLEMENTATION.md  BOUNTY_WORKFLOW_ANALYSIS.md  BRANCH-CONSOLIDATION.md  BRANCH-STRATEGY.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY-MANAGEMENT.md  ENHANCEMENTS_QUICKREF.md  FIX_SUMMARY.md  FUNCTIONALITY_VERIFICATION.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_hyp-5430acaa.md  IMPROVEMENTS_SUMMARY.md  INDEX_Reentrancy_Analysis.md  INSIGHTS-IMPLEMENTATION-SUMMARY.md  INVESTIGATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  LICENSE  OPTIMIZATION-SUMMARY.md  OPTIMIZATION_SUMMARY.md  PARALLEL-AGENTS-GUIDE.md  PARALLEL-AGENTS-SUMMARY.md  PR_139_vs_140_COMPARISON.md  QUICK_START.md  (+34 more)
.github/: copilot-assignments.json  copilot-instructions.md  dependabot.yml
.semgrep/: README.md
.windsurf/: IMPLEMENTATION_STATE.md
docs/: ADVANCED-TESTING-IMPLEMENTATION.md  CI_STATUS.md  DEFI_EXPLOIT_PROTECTION_GUIDE.md  DEFI_PROTECTION_SUMMARY.md  DEFI_SECURITY_CHECKLIST.md  DEFI_SECURITY_INDEX.md  DEFI_SECURITY_QUICKSTART.md  GAS_OPTIMIZATIONS.md  README.md  (+17 more)
secbrain/: README.md  coverage.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-hashed-backup.txt  requirements-hashed.txt  requirements.in  requirements.txt
secbrain/config/: models.yaml  tools.yaml
secbrain/docs/: INSIGHTS-DEMO.md  INSIGHTS-GUIDE.md  README.md  TYPE_SAFETY.md  architecture-updated.md  architecture.md  automated-agents.md  hypothesis_enhancement.md  ops.md  phase0-baseline.md  research_orchestrator.md  threat_model.md  workflows.md
secbrain/examples/: INSIGHTS-QUICK-REF.md  conftest.py  dry_run_test.py  enzyme_contracts.json  enzyme_program.json  enzyme_scope.yaml  generate_insights_dashboard.py  literalstring_demo.py  program.json  research_orchestrator_example.py  scope.yaml  tools_smoke_test.py
secbrain/examples/dummy_target/: program.json  scope.yaml
secbrain/examples/originprotocol/: program.json  scope.yaml
secbrain/examples/test_workspace/: meta_metrics.jsonl  run_summary.json  secbrain.db
secbrain/examples/test_workspace/findings/: findings.json
secbrain/examples/test_workspace/learnings/: de521a1f.json
secbrain/examples/test_workspace/logs/: run-2025-12-17T17-54-27-0fe87cd6.jsonl  run-2025-12-17T17-54-50-68de9c14.jsonl  run-2025-12-17T17-56-42-de521a1f.jsonl  run-2025-12-21T10-56-22-3a13475d.jsonl
secbrain/examples/test_workspace/phases/: ingest.json  plan.json
secbrain/examples/test_workspace/recon/: assets.json
secbrain/examples/thresholdnetwork/: program.json  scope.yaml
secbrain/scripts/: fetch_instascope.py  parse_foundry_profiles.py
secbrain/secbrain/: __init__.py  verification.py
secbrain/secbrain/agents/: __init__.py  advanced_research_agent.py  base.py  exploit_agent.py  exploit_pattern_db.py  exploit_specialists.py  hypothesis_enhancement.py  hypothesis_enhancer.py  immunefi_intelligence.py  meta_learning_agent.py  oracle_manipulation_detector.py  planner_agent.py  program_ingest_agent.py  recon_agent.py  reporting_agent.py  research_orchestrator.py  solidity_security_patterns.py  static_analysis_agent.py  supervisor.py  threshold_network_patterns.py  triage_agent.py  verifiers.py  vuln_hypothesis_agent.py
secbrain/secbrain/cli/: __init__.py  approval_ui.py  secbrain_cli.py
secbrain/secbrain/config/: __init__.py  constants.py  models.yaml
secbrain/secbrain/core/: __init__.py  approval.py  consensus_engine.py  context.py  errors.py  exceptions.py  foundry_runner.py  identity.py  logging.py  payload_adaptation.py  profit_calculator.py  research_orchestrator.py  types.py  validation.py  verification.py
secbrain/secbrain/fixtures/: __init__.py  contract_fixtures.py
secbrain/secbrain/insights/: __init__.py  aggregator.py  analyzer.py  reporter.py
secbrain/secbrain/models/: __init__.py  base.py  gemini_advisor.py  open_workers.py
secbrain/secbrain/tools/: __init__.py  bounty_metrics.py  foundry_runner.py  hardhat_runner.py  http_client.py  immunefi_client.py  oob_client.py  perplexity_research.py  playwright_client.py  recon_cli_wrappers.py  scanners.py  storage.py
secbrain/secbrain/utils/: __init__.py  circuit_breaker.py  concurrency.py  llm_helpers.py  response_diff.py  tool_checker.py
secbrain/secbrain/workflows/: __init__.py  bug_bounty_run.py  checkpoint_manager.py  enhanced_bounty_workflow.py  http_workflow.py  hypothesis_quality_filter.py  parallel_executor.py  performance_metrics.py
secbrain/test_workspace/logs/: run-2025-12-17T19-00-08-d5b60af7.jsonl  run-2025-12-17T19-00-53-1bb4820d.jsonl  run-2025-12-17T19-01-15-e84c9cd9.jsonl  run-2025-12-18T02-06-53-a18ded37.jsonl
secbrain/tests/: conftest.py  test_adaptive_rate_limiter.py  test_approval_flow.py  test_approval_ui.py  test_circuit_breaker.py  test_concurrency.py  test_concurrency_harness.py  test_consensus_engine.py  test_contract_recon.py  test_errors.py  test_exceptions.py  test_exploit_agent_verify_integration.py  test_exploit_pattern_db.py  test_exploit_specialists.py  test_fixtures.py  test_foundry_parser.py  test_gemini_advisor.py  test_hardhat_runner.py  test_http_client_retries.py  test_http_workflow.py  test_hypothesis_enhancement.py  test_identity.py  test_immunefi_integration.py  test_insights_aggregator.py  test_insights_analyzer.py  test_kill_switch.py  test_llm_helpers.py  test_llm_helpers_utils.py  test_logging.py  test_meta_learning_agent.py  test_models_base.py  test_oob_client.py  test_open_workers.py  test_payload_adaptation.py  test_perplexity_research.py  test_planner_agent.py  test_profit_calculator.py  test_profit_equiv.py  test_property_based.py  test_rate_limiter.py  (+17 more)
secbrain/tests/fixtures/: README.md  sota_program.json  sota_scope.yaml
secbrain/validation_workspace/logs/: run-2025-12-17T19-05-45-cd934317.jsonl
(+1034 files in other folders)
