[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secbrain"
version = "0.1.0"
description = "Multi-agent security bounty system with research integration, advisor models, and guarded tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "SecBrain Team" }
]
keywords = ["security", "bug-bounty", "agents", "ai", "vulnerability-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "google-generativeai>=0.3.0",
    "openai>=1.6.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.2.0",
    "eth-utils>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
secbrain = "secbrain.cli.secbrain_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["secbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501: Line too long (conflicts with formatter)
# F821: Undefined name (temporary - requires code fixes)
# F841: Unused variable (non-critical warnings)
ignore = ["E501", "F821", "F841"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
