[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secbrain"
version = "0.1.0"
description = "Multi-agent security bounty system with research integration, advisor models, and guarded tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "SecBrain Team" }
]
keywords = ["security", "bug-bounty", "agents", "ai", "vulnerability-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "google-generativeai>=0.3.0",
    "openai>=1.6.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.2.0",
    "eth-utils>=2.0.0",
    "eth-hash[pycryptodome]>=0.7.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "hypothesis>=6.0.0",
    "mutmut>=2.4.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
secbrain = "secbrain.cli.secbrain_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["secbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Comprehensive rule set for security research and bug bounty work
# Note: This is an aggressive configuration designed for maximum code quality.
# Some rules may produce noise during development but help catch security issues early.
# Consider using `# noqa: <rule>` with justification for false positives.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
# E501: Line too long (conflicts with formatter)
# F821: Undefined name (temporary - requires code fixes)
# F841: Unused variable (non-critical warnings)
# S101: Use of assert (common in tests)
# PLR0913: Too many arguments to function
# TRY003: Avoid specifying long messages outside exception class
ignore = ["E501", "F821", "F841", "S101", "PLR0913", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "PLR2004"]
"examples/**/*.py" = ["T20", "S"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "secbrain.core.profit_calculator",
    "secbrain.core.logging",
    "secbrain.agents.*",
    "secbrain.workflows.*",
    "secbrain.insights.*",
]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=secbrain --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: marks property-based tests using Hypothesis",
]

[tool.hypothesis]
max_examples = 100
deadline = 400  # milliseconds
phases = ["explicit", "reuse", "generate", "target", "shrink"]

[tool.coverage.run]
source = ["secbrain"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "test_workspace", "validation_workspace"]
skips = ["B101", "B601"]  # assert_used, paramiko_calls

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.design]
max-args = 10
max-attributes = 15
